# rosenpass

./: .dockerignore  .gitignore  .gitlab-ci.yml  .mailmap  .prettierignore  CHANGELOG.md  CI.md  CONTRIBUTING.md  Cargo.toml  analyze.sh  build.rs  cliff.toml  coverage_report.sh  deny.toml  dummy.txt  flake.nix  format_rust_code.sh  git-sha  index.html  overlay.nix  readme.md  rp  supply-chain-CI.md  supply-chain-protection.md  treefmt.nix  wireguard-tools-1.0.20250521-3.fc44.x86_64.rpm
bench-util/: Cargo.toml
bench-util/src/: lib.rs
cipher-traits/: Cargo.toml  readme.md
cipher-traits/src/: algorithms.rs  kem.rs  keyed_hash.rs  lib.rs  primitives.rs
cipher-traits/src/primitives/: aead.rs  kem.rs  keyed_hash.rs
ciphers/: Cargo.toml  readme.md
ciphers/benches/: primitives.rs
ciphers/src/: hash_domain.rs  lib.rs  providers.rs
ciphers/src/providers/: basic.rs  libcrux.rs
ciphers/src/subtle/: blake2b.rs  chacha20poly1305.rs  chacha20poly1305_ietf.rs  chacha20poly1305_ietf_libcrux.rs  either_hash.rs  incorrect_hmac_blake2b.rs  keyed_hash.rs  keyed_shake256.rs  mod.rs  xchacha20poly1305.rs  xchacha20poly1305_ietf.rs
constant-time/: Cargo.toml  readme.md
constant-time/src/: compare.rs  increment.rs  lib.rs  memcmp.rs  xor.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aead_enc_into.rs  blake2b.rs  box_secret_alloc.rs  box_secret_alloc_malloc.rs  box_secret_alloc_memfdsec.rs  box_secret_alloc_memfdsec_mallocfb.rs  box_sodium_alloc.rs  handle_msg.rs  kyber_encaps.rs  mceliece_encaps.rs  vec_secret_alloc.rs  vec_secret_alloc_malloc.rs  vec_secret_alloc_memfdsec.rs  vec_secret_alloc_memfdsec_mallocfb.rs  vec_sodium_alloc.rs
fuzzing/: Cargo.toml
fuzzing/fuzz_targets/: aead_enc_into.rs  blake2b.rs  handle_msg.rs  kyber_encaps.rs  mceliece_encaps.rs
lenses/: Cargo.toml  readme.md
lenses/src/: lib.rs
marzipan/: README.md  TODO.md  flake.nix  marzipan.awk  parser.py  pyproject.toml  test-gpt-oss-2.py  test-gpt-oss.py  test_parser.sh
marzipan/marzipan.vim/ftdetect/: marzipan.vim
marzipan/marzipan.vim/ftplugin/: marzipan.vim
marzipan/marzipan.vim/syntax/: marzipan.vim
marzipan/nix/: init.nix  system.nix
marzipan/nix/hyuga/: pyproject.toml
marzipan/src/: __init__.py  analyze.sh  letfuncdecl.py  parser.py  sample.pv  splitter.py  util.py
marzipan/src/grammar/: _cryptoverif.lark  _main.lark  common.lark  cryptoverif.lark  decl.lark  lemma.lark  process.lark  query.lark  term.lark
marzipan/src/grammars/: awk_proverif.lark  marzipan_awk.lark  marzipan_minimal.lark  proverif.lark  proverif_minimal.lark
networkmanager-plugin/: Cargo.toml  README.md
networkmanager-plugin/examples/: example_config.toml
networkmanager-plugin/src/: config.rs  config_test.rs  dbus_service.rs  error.rs  lib.rs  main.rs  manager.rs  simple_connection.rs
networkmanager-plugin/systemd/: rosenpass-nm-plugin.service
oqs/: Cargo.toml  readme.md
oqs/src/: kem_macro.rs  lib.rs
rosenpass/: Cargo.toml  build.rs
rosenpass/.test_vectors/: crypto_server_test_vector_1.json  crypto_server_test_vector_1.toml  crypto_server_test_vector_1.toml_offloaded_value_0.zstd  crypto_server_test_vector_1.toml_offloaded_value_1.zstd  crypto_server_test_vector_1.toml_offloaded_value_13.zstd  crypto_server_test_vector_1.toml_offloaded_value_14.zstd  crypto_server_test_vector_1.toml_offloaded_value_15.zstd  crypto_server_test_vector_1.toml_offloaded_value_16.zstd  crypto_server_test_vector_1.toml_offloaded_value_2.zstd  crypto_server_test_vector_1.toml_offloaded_value_26.zstd  crypto_server_test_vector_1.toml_offloaded_value_3.zstd  crypto_server_test_vector_1.toml_offloaded_value_46.zstd  crypto_server_test_vector_1.toml_offloaded_value_47.zstd  crypto_server_test_vector_1.toml_offloaded_value_48.zstd
rosenpass/benches/: handshake.rs  trace_handshake.rs
rosenpass/src/: app_server.rs  broker.rs  cli.rs  coloring.rs  config.rs  event_loop.rs  hash_domains.rs  keygen.rs  labeled_prf.rs  lib.rs  lprf.rs  main.rs  msgs.rs  msgs.rs.orig  prftree.rs  protocol.rs  protocol.rs.orig  sodium.rs  test_vec_integration.rs  test_vector_sets.rs  usage.md  util.rs
rosenpass/src/api/: api_handler.rs  cli.rs  config.rs  crypto_server_api_handler.rs  mod.rs
rosenpass/src/classical_crypto/: mod.rs
rosenpass/src/cmd/: exchange.rs  exchangeconfig.rs  genconfig.rs  genkeys.rs  keygen.rs  man.rs  mod.rs  validate.rs
rosenpass/src/net/: manager.rs  mod.rs  netctl.rs  network_manager.rs
rosenpass/src/network/: connman.rs  manager.rs  mod.rs
rosenpass/src/primitives/: kmac.rs  mod.rs  sodium.rs
rosenpass/src/protocol/: basic_types.rs  build_crypto_server.rs  constants.rs  cookies.rs  index.rs  mod.rs  osk_domain_separator.rs  (+6 more)
rosenpass/tests/: api-integration-tests-api-setup.rs  api-integration-tests-supply-keypair.rs  api-integration-tests.rs  app_server_example.rs  config_Rosenpass_add_if_any.rs  config_Rosenpass_new.rs  config_Rosenpass_parse_args_simple.rs  config_Rosenpass_validate.rs  config_rosenpass_add_if_any.rs  config_rosenpass_store.rs  config_rosenpass_validate.rs  crypto_server_test_vectors.rs  gen-ipc-msg-types.rs  integration_test.rs  main-fn-generates-manpages.rs  main-fn-prints-errors.rs  poll_example.rs  test_vector_crypto_server.rs  trace.rs
rp/: Cargo.toml  build.rs
rp-rs/: Cargo.toml
rp-rs/src/: main.rs  utils.rs
rp/src/: cli.rs  exchange.rs  key.rs  main.rs  main_supported_platforms.rs
rp/tests/: smoketest.rs
secret-memory/: Cargo.toml  readme.md
secret-memory/src/: allocator.rs  debug.rs  file.rs  lib.rs  policy.rs  public.rs  rand.rs  secret.rs  serialization.rs
sodium/: Cargo.toml  build.rs  readme.md
sodium/src/: helpers.rs  lib.rs
to/: Cargo.toml  README.md
to/src/: lib.rs  ops.rs
util/: Cargo.toml
util/src/: b64.rs  build.rs  controlflow.rs  convert.rs  fd.rs  file.rs  functional.rs  io.rs  lib.rs  mem.rs  mio.rs  option.rs  ord.rs  result.rs  rustix.rs  time.rs  trace_bench.rs  typenum.rs
util/tests/: janitor.rs  pipe.rs
wireguard-broker/: Cargo.toml  readme.md
wireguard-broker/src/: lib.rs  netlink.rs
wireguard-broker/tests/: integration.rs
(+483 files in other folders)
