[package]
name = "rosenpass-bench-util"
version = "0.1.0"
authors = ["Jan Winkelmann <git@janwinkelmann.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Utilities used internally for benchmarking Rosenpass"
homepage = "https://rosenpass.eu/"
repository = "https://github.com/rosenpass/rosenpass"
rust-version = "1.77"

[dependencies]
libcrux-test-utils = { workspace = true }
lazy_static = { workspace = true }
