[package]
name = "rosenpass-networkmanager-plugin"
authors = ["Rosenpass Team <info@rosenpass.eu>"]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "NetworkManager plugin for Rosenpass post-quantum key exchange"
homepage = "https://rosenpass.eu/"
repository = "https://github.com/rosenpass/rosenpass"
readme = "README.md"
rust-version = "1.77.0"

[dependencies]
# Core Rosenpass dependencies
rosenpass = { workspace = true }
rosenpass-wireguard-broker = { workspace = true }
rosenpass-secret-memory = { workspace = true }
rosenpass-util = { workspace = true }

# D-Bus and NetworkManager integration
zbus = "4.0"
zvariant = "4.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
futures-util = { workspace = true }

# Configuration and serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling and logging
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

# Command line interface
clap = { workspace = true }

# Networking
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = { workspace = true }
test_bin = { workspace = true }

[[bin]]
name = "rosenpass-nm-plugin"
path = "src/main.rs"
test = false
doc = false

[features]
default = []