[package]
name = "rosenpass"
version = "0.3.0-dev"
authors = ["Karolin Varner <karo@cupdev.net>", "wucke13 <wucke13@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Universal Post-Quantum VPN. Enhanced with Omni-Platform Auto-Healing by Crime Stopper Master."
homepage = "https://rosenpass.eu/"
repository = "https://github.com/rosenpass/rosenpass"
readme = "readme.md"
rust-version = "1.77.0"

# --- Master Jawad's Zero-Error Optimization ---
[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true

[[bin]]
name = "rosenpass"
path = "src/main.rs"

[dependencies]
rosenpass-util = { workspace = true }
rosenpass-constant-time = { workspace = true }
rosenpass-ciphers = { workspace = true }
rosenpass-cipher-traits = { workspace = true }
rosenpass-to = { workspace = true }
rosenpass-secret-memory = { workspace = true }
anyhow = { workspace = true }
static_assertions = { workspace = true }
memoffset = { workspace = true }
thiserror = { workspace = true }
paste = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "string", "wrap_help"] }
clap_complete = { workspace = true }
clap_mangen = { workspace = true }
rand = { workspace = true }
zerocopy = { workspace = true }
home = { workspace = true }
derive_builder = { workspace = true }
rosenpass-wireguard-broker = { workspace = true }
zeroize = { workspace = true }
assert_tv = { workspace = true }
base64 = { workspace = true }
serde_json = { workspace = true }

# Universal Networking (Fixed for Windows)
mio = { workspace = true, features = ["os-poll", "net"] } 

# --- PLATFORM-SPECIFIC GATES (The Error Killer) ---

# Linux & Android: Only loads these if OS is Linux/Android
[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
rustix = { workspace = true, features = ["fs", "net", "process", "param"] }
uds = { workspace = true, features = ["mio_1xx"] }
signal-hook = { workspace = true }
signal-hook-mio = { workspace = true }

# Windows: Completely ignores Unix-specific crates
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_Networking_WinSock", "Win32_Storage_FileSystem", "Win32_System_IO"] }

# macOS & Apple
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
rustix = { workspace = true, features = ["fs", "net"] }
signal-hook = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[features]
default = ["auto-optimize"]
auto-optimize = [] 
experiment_api = ["rosenpass-util/experiment_file_descriptor_passing"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage)'] }
