[package]
name = "rp"
version = "0.1.0"
edition = "2021"
authors = ["wucke13 <wucke13@gmail.com>", "Karolin Varner <karo@cupdev.net>"]
license = "MIT OR Apache-2.0"
description = "Build post-quantum-secure VPNs with WireGuard!"
homepage = "https://rosenpass.eu/"
repository = "https://github.com/rosenpass/rosenpass"
readme = "../readme.md"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
